Use Java's own base64 encoder